--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -25,9 +25,14 @@ table td, table th {
   padding: 20px;
   display: flex;
   justify-content: center;
-  width: 100%;
+  width: 90%;
+  max-width: 100vw;
 }
 
 .kaw-summary-2 {
 	font-size: 2.0rem;
+}
+
+body {
+  max-width: 100vw;
 }
