--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -7,6 +7,12 @@ summary {
   font-size: 2.625rem;
 }
 
+details {
+	text-align: left;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
 table {
     display: table;
     box-sizing: border-box;
@@ -33,6 +39,3 @@ table td, table th {
 	font-size: 2.0rem;
 }
 
-body {
-  max-width: 100vw;
-}
