--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -39,3 +39,10 @@ table td, table th {
 	font-size: 2.0rem;
 }
 
+.kaw-explanation {
+  border: 1px solid grey; 
+  padding: 10px; 
+  border-radius: 10px; 
+  display: inline-block;
+  font-style: italic;
+}
