--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -36,13 +36,19 @@ table td, table th {
 }
 
 .kaw-summary-2 {
-	font-size: 2.0rem;
+	font-size: 1.5rem;
 }
 
 .kaw-explanation {
-  border: 1px solid grey; 
-  padding: 10px; 
-  border-radius: 10px; 
-  display: inline-block;
-  font-style: italic;
+	border: 1px solid #ccc; 
+    padding: 5px; 
+    border-radius: 10px; 
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.2); 
+    font-style: italic; 
+    display: inline-block; 
+    text-align: center; 
+    margin: 15px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+    transform: scale(1.0);
 }
