--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -39,7 +39,7 @@ table td, table th {
 	font-size: 1.5rem;
 }
 
-.kaw-explanation {
+.kaw-game-hint {
 	border: 1px solid #ccc; 
     padding: 5px; 
     border-radius: 10px; 
@@ -51,4 +51,10 @@ table td, table th {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: pointer;
     transform: scale(1.0);
+}
+
+.kaw-card-brief {
+	font-weight: bold; 
+    text-align: center; 
+    margin: 15px;
 }
