--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -37,7 +37,7 @@ table td, table th {
 
 .kaw-summary-2 {
 	font-size: 1.5rem;
-	font-family: 'Jolly Lodger', cursive;8
+	font-family: 'Jolly Lodger', cursive;
 }
 
 .kaw-game-hint {
