--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -9,6 +9,11 @@ summary {
   font-family: 'Jolly Lodger', cursive;
 }
 
+Title {
+  font-size: 2.625rem;
+  font-family: 'Jolly Lodger', cursive;
+}
+
 details {
 	text-align: left;
 	padding-left: 20px;
