--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -4,12 +4,12 @@ h1 {
   font-family: 'Jolly Lodger', cursive;	
 }
 
-summary {
-  font-size: 2.625rem;
-  font-family: 'Jolly Lodger', cursive;
+h2 {
+  font-size: 2.0rem;
+  font-family: 'Jolly Lodger', cursive;	
 }
 
-Title {
+summary {
   font-size: 2.625rem;
   font-family: 'Jolly Lodger', cursive;
 }
