--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -13,8 +13,8 @@ $light-table-color: #dcdcdc;
 /* Dark theme colors */
 $dark-background: #232425;
 $dark-background-secondary: #3b3d42;
-$dark-background-header: #2b1c1d;
-$dark-color: #a9a9b3;
+$dark-background-header: #232425;
+$dark-color: #d9a9b3;
 $dark-color-variant: white;
 $dark-color-secondary: #b3b3bd;
 $dark-border-color: #4e4e57;
