--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,17 +1,41 @@
 
 h1 {
-  font-size: 3.5rem;
-  font-family: 'Jolly Lodger', cursive;	
+  font-size: 4.5rem;
+  font-family: 'Jolly Lodger', cursive;
+  width: 100%;
+  max-width: 8000px;
+  color: crimson;
+  margin: 0.1em;
+}
+
+[data-theme="dark"] h1 {
+  color: crimson; 
 }
 
 h2 {
   font-size: 2.0rem;
   font-family: 'Jolly Lodger', cursive;	
+  color: black;
+  margin-top: 0.1em;
+  margin-bottom: 1.5em;
+  font-weight: normal;
+}
+
+[data-theme="dark"] h2 {
+  color: white;
 }
 
 summary {
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
   font-size: 2.625rem;
-  font-family: 'Jolly Lodger', cursive;
+  color: black;
+}
+
+[data-theme="dark"] summary {
+  color: white;
 }
 
 details {
@@ -44,7 +68,15 @@ table td, table th {
 
 .kaw-summary-2 {
 	font-size: 1.5rem;
-	font-family: 'Jolly Lodger', cursive;
+	font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+  color: black;
+}
+
+[data-theme="dark"] kaw-summary-2 {
+  color: white; /* Farbe im dunklen Theme */
 }
 
 .kaw-game-hint {
