--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -4,12 +4,14 @@ h1 {
   font-family: 'Jolly Lodger', cursive;
   width: 100%;
   max-width: 8000px;
-  color: crimson;
-  margin: 0.1em;
+  line-height:0.8;
+  color: red;
+  margin: 0.2em;
+  margin-bottom: 0.6em;
 }
 
 [data-theme="dark"] h1 {
-  color: crimson; 
+  color: red; 
 }
 
 h2 {
@@ -30,7 +32,7 @@ summary {
   font-optical-sizing: auto;
   font-weight: normal;
   font-style: normal;
-  font-size: 2.625rem;
+  font-size: 2.5rem;
   color: black;
 }
 
