--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -6,6 +6,7 @@ h1 {
   max-width: 8000px;
   line-height:0.8;
   color: red;
+  font-weight: normal;
   margin: 0.2em;
   margin-bottom: 0.6em;
 }
@@ -34,6 +35,7 @@ summary {
   font-style: normal;
   font-size: 2.5rem;
   color: black;
+  
 }
 
 [data-theme="dark"] summary {
