--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -95,6 +95,7 @@ table td, table th {
     margin: 15px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     transform: scale(1.0);
+	width: 95%;
 }
 
 [data-theme="dark"] kaw-game-hint {
