--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -57,10 +57,13 @@ table {
     border-color: gray;
 	width: 100%;
 	table-layout: fixed;
+	border-collapse: collapse;
 }
 
 table td, table th {
   max-width: 400px;      /* Maximale Breite für alle Tabellenzellen */
+  border-left: 1px solid #dddddd;
+  border-right: 1px solid #dddddd;
 }
 
 .kaw-card-sample {
