--- a/layouts/partials/audio.html
+++ b/layouts/partials/audio.html
@@ -1,5 +1,5 @@
 <audio id="myAudio" autoplay muted="true">
-    <source src="{{ "audio/TheMaidenFan2.mp3" | relURL }}" type="audio/mpeg">
+    <source src="{{ "audio/TheMaidenFan_128.mp3" | relURL }}" type="audio/mpeg">
     Dein Browser unterstützt das Audio-Tag nicht.
   </audio>
 
