--- a/layouts/partials/audio.html
+++ b/layouts/partials/audio.html
@@ -1,4 +1,4 @@
-<audio id="myAudio" autoplay muted="true">
+<audio id="myAudio" controls muted="true">
     <source src="{{ "audio/TheMaidenFan_128.mp3" | relURL }}" type="audio/mpeg">
     Dein Browser unterstützt das Audio-Tag nicht.
   </audio>
