--- a/layouts/partials/audio.html
+++ b/layouts/partials/audio.html
@@ -22,7 +22,7 @@
 <div class="audio-controls">
   <!-- Audio-Element, versteckt, startet automatisch und gemutet -->
   <audio id="audioPlayer" autoplay muted class="hidden">
-    <source id="audioSource" src="{{ "audio/TheMaidenFan_128.mp3" | relURL }}" type="audio/mpeg">
+    <source id="audioSource" src="{{ "audio/TheMaidenFan_ambiente.mp3" | relURL }}" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
@@ -34,8 +34,8 @@
 <script>
   // Liste der MP3-Dateien
   const mp3List = [
-    "{{ "audio/TheMaidenFan_128.mp3" | relURL }}",
-    "{{ "audio/GB.mp3" | relURL }}"
+    "{{ "audio/TheMaidenFan_ambiente.mp3" | relURL }}",
+    "{{ "audio/GB_ambiente.mp3" | relURL }}"
   ];
   let currentIndex = 0;
 
