--- a/layouts/partials/audio.html
+++ b/layouts/partials/audio.html
@@ -34,8 +34,12 @@
 <script>
   // Liste der MP3-Dateien
   const mp3List = [
-    "{{ "audio/TheMaidenFan_ambiente.mp3" | relURL }}",
-    "{{ "audio/GB_ambiente.mp3" | relURL }}"
+	"{{ "audio/GB_ambiente.mp3" | relURL }}",
+    "{{ "audio/kaw_song_ambiente.mp3" | relURL }}",
+	"{{ "audio/mix_ambiente.mp3" | relURL }}",
+	"{{ "audio/bad_excuse_ambiente.mp3" | relURL }}",
+	"{{ "audio/aces_high_cover_ambiente.mp3" | relURL }}",
+    "{{ "audio/TheMaidenFan_ambiente.mp3" | relURL }}"
   ];
   let currentIndex = 0;
 
