--- a/layouts/partials/audio.html
+++ b/layouts/partials/audio.html
@@ -39,7 +39,8 @@
 	"{{ "audio/mix_ambiente.mp3" | relURL }}",
 	"{{ "audio/bad_excuse_ambiente.mp3" | relURL }}",
 	"{{ "audio/aces_high_cover_ambiente.mp3" | relURL }}",
-    "{{ "audio/TheMaidenFan_ambiente.mp3" | relURL }}"
+    "{{ "audio/TheMaidenFan_ambiente.mp3" | relURL }}",
+	"{{ "audio/trooper_cover_ambiente.mp3" | relURL }}"
   ];
   let currentIndex = 0;
 
