--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -62,8 +62,7 @@ table {
 
 table td, table th {
   max-width: 400px;      /* Maximale Breite für alle Tabellenzellen */
-  border-left: 1px solid #dddddd;
-  border-right: 1px solid #dddddd;
+  border: 1px solid #dddddd;
 }
 
 .kaw-card-sample {
