--- a/layouts/partials/audio.html
+++ b/layouts/partials/audio.html
@@ -16,10 +16,11 @@
 <script>
 const mp3List = [
     { src: "{{ "audio/kaw_song_ambiente.mp3" | relURL }}", title: "KAW Song" },
-    { src: "{{ "audio/TheMaidenFan_ambiente.mp3" | relURL }}", title: "The Maiden Fan" },
+    { src: "{{ "audio/TheMaidenFan_ambiente.mp3" | relURL }}", title: "The Maiden Fan Harter Hans" },
     { src: "{{ "audio/GB_ambiente.mp3" | relURL }}", title: "Garagenbier" },
     { src: "{{ "audio/mix_ambiente.mp3" | relURL }}", title: "Mix" },
     { src: "{{ "audio/bad_excuse_ambiente.mp3" | relURL }}", title: "Bad Excuse" },
+	{ src: "{{ "audio/tol_ambiente.mp3" | relURL }}", title: "Temple Of Love Harter Hans Cover" },
     { src: "{{ "audio/aces_high_cover_ambiente.mp3" | relURL }}", title: "Aces High Harter Hans Cover" },
     { src: "{{ "audio/trooper_cover_ambiente.mp3" | relURL }}", title: "Trooper Harter Hans Cover" }
 ];
