--- a/layouts/partials/audio.html
+++ b/layouts/partials/audio.html
@@ -11,7 +11,7 @@
     <button onclick="nextTrack()" title="Nächster Titel"><i class="fas fa-forward"></i></button>
 </div>
 
-<audio id="audio-player" style="display: none;"></audio>
+<audio id="audio-player" style="display: none;" preload="none"></audio>
 
 <script>
 const mp3List = [
